--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.49.3",
     "farova": "file:",
+    "heroicons": "^2.2.0",
     "next": "15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
