--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.49.3",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "farova": "file:",
     "headlessui": "^0.0.0",
     "heroicons": "^2.2.0",
+    "jspdf": "^3.0.1",
     "next": "15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
