--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "heroicons": "^2.2.0",
     "jspdf": "^3.0.1",
     "next": "15.2.4",
+    "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -28,6 +29,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.17",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
