--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "headlessui": "^0.0.0",
     "heroicons": "^2.2.0",
     "jspdf": "^3.0.1",
+    "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
